APP03022-mrch.bff.somx.ppsomx.fiscal/kustomization/development/workload-identity.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ${PROJECT_NAME}

spec:
  template:
    spec:
      serviceAccountName: fbc-bff-workload-identity
      automountServiceAccountToken: false

      containers:
        - name: ${PROJECT_NAME}

          resources:
            requests:
              cpu: "50m"
              memory: "200Mi"
              ephemeral-storage: "100Mi"
            limits:
              cpu: "250m"
              memory: "400Mi"
              ephemeral-storage: "500Mi"
